src/test/ui/array-slice-vec/array_const_index-1.stderr
error: any use of this value will cause an error
  --> $DIR/array_const_index-1.rs:2:16
   |
LL | const B: i32 = A[1];
   | ------------   ^^^^ index out of bounds: the length is 0 but the index is 1
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

Future incompatibility report: Future breakage diagnostic:
error: any use of this value will cause an error
  --> $DIR/array_const_index-1.rs:2:16
   |
LL | const B: i32 = A[1];
   | ------------   ^^^^ index out of bounds: the length is 0 but the index is 1
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

